fix smal issue on mobile design

--- a/catalog/view/theme/default/stylesheet/d_ajax_search_mobile.css
+++ b/catalog/view/theme/default/stylesheet/d_ajax_search_mobile.css
@@ -81,8 +81,8 @@ input:focus {
     margin-top: 8px;
     margin-left: 10px;
 }
-.fa-exclamation-circle{
-    color: grey;
+.fa-exclamation-circle, .lul{
+    color: grey!important;
 }
 .modal {
   position: fixed;
